Update BitBucket authentication: AccessToken → AppPassword/ApiToken
- Replace legacy 'AccessToken' with proper BitBucket authentication
- Add 'AppPassword' field for current BitBucket App Password auth
- Add 'ApiToken' field for future API token auth (post Sept 2025)
- Add 'Username' field required for BitBucket App Password auth
- Update BitBucketService to use Basic Auth with username:password
- Add transition logic for Sept 9, 2025 App Password deprecation
- Update all documentation to reflect new authentication model
- Maintain backward compatibility with legacy AccessToken field

Files updated:
- Configuration models and services
- Setup wizard and token update service
- All documentation (README, QUICK_REF, CONFIGURATION, TODO)
- Example configuration files

--- a/appsettings.json
+++ b/appsettings.json
@@ -14,7 +14,8 @@
     {
       "Name": "BitBucket",
       "BaseUrl": "https://api.bitbucket.org",
-      "AccessToken": "REPLACE IN appsettings.local.json",
+      "AppPassword": "REPLACE IN appsettings.local.json",
+      "Username": "REPLACE IN appsettings.local.json",
       "WorkspaceOrOrganization": "REPLACE IN appsettings.local.json",
       "IsDefault": true,
       "AdditionalSettings": {
